--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -757,7 +757,7 @@
     <string name="lbl_original_title_long">Tytuł oryginalny, jeśli książka jest tłumaczeniem</string>
     <string name="error_site_access_blocked">Dostęp został zablokowany przez stronę internetową.</string>
     <string name="pt_scan_mode">Tryb skanowania</string>
-    <string name="option_sync_deleted_book_records">Lokalna synchronizacja usuniętych książek</string>
+    <string name="option_sync_deleted_book_records">Synchronizowanie usuniętych książek na tym urządzeniu</string>
     <string name="site_description_dutch_catalogue">Holenderski i nie tylko; Katalog</string>
     <string name="site_description_dutch_catalogue_eu_comics">Niderlandzki i nie tylko; Katalog; Komiksy europejskie</string>
     <string name="site_description_dutch_shopping">Niderlandzki i więcej; Zakupy</string>
@@ -766,4 +766,7 @@
     <string name="site_description_french_catalogue_eu_comics">Francuski i więcej; Katalog; Komiksy europejskie</string>
     <string name="site_description_general_shopping">Ogólne; Zakupy</string>
     <string name="site_description_portuguese_shopping">Portugalski i więcej; Zakupy</string>
+    <string name="info_sync_deleted_book_records">Spowoduje to sprawdzenie historii usuniętych książek z poprzedniego importu z innego urządzenia i synchronizację tych usunięć. Innymi słowy, książki usunięte na innym urządzeniu zostaną również usunięte na tym urządzeniu.</string>
+    <string name="option_clear_deleted_book_records">Wyczyść historię usuniętych książek</string>
+    <string name="info_clear_deleted_book_records">Spowoduje to wyczyszczenie historii usuniętych książek. Żadne książki nie zostaną usunięte.</string>
 </resources>
