--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -753,7 +753,7 @@
     <string name="lbl_original_title_long">Původní název, pokud je tato kniha překladem</string>
     <string name="error_site_access_blocked">Přístup byl zablokován na webových stránkách.</string>
     <string name="pt_scan_mode">Režim skenování</string>
-    <string name="option_sync_deleted_book_records">Místní synchronizace smazaných knih</string>
+    <string name="option_sync_deleted_book_records">Synchronizace smazaných knih v tomto zařízení</string>
     <string name="site_description_dutch_catalogue">Holandština a další; Katalog</string>
     <string name="site_description_dutch_catalogue_eu_comics">Nizozemština a další; Katalog; Evropský komiks</string>
     <string name="site_description_dutch_shopping">Nizozemština a další; Nakupování</string>
@@ -762,4 +762,7 @@
     <string name="site_description_french_catalogue_eu_comics">Francouzština a další; Katalog; Evropský komiks</string>
     <string name="site_description_general_shopping">Obecné; Nakupování</string>
     <string name="site_description_portuguese_shopping">Portugalština a další; Nakupování</string>
+    <string name="info_sync_deleted_book_records">Zkontroluje se historie smazaných knih z předchozího importu z jiného zařízení a tato smazání se synchronizují. Jinými slovy, knihy smazané v jiném zařízení budou smazány i v tomto zařízení.</string>
+    <string name="option_clear_deleted_book_records">Vymazání historie smazaných knih</string>
+    <string name="info_clear_deleted_book_records">Tato funkce vymaže historii smazaných knih. Žádné skutečné knihy nebudou odstraněny.</string>
 </resources>
