--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -755,10 +755,10 @@
     <string name="lbl_original_title_long">Título original si el libro es una traducción</string>
     <string name="error_site_access_blocked">El acceso ha sido bloqueado por el sitio web.</string>
     <string name="pt_scan_mode">Modo de lectura</string>
-    <string name="option_clear_deleted_book_records">Borrar la caché de los libros eliminados</string>
-    <string name="info_clear_deleted_book_records">Esto borrará la caché de libros borrados. No se borrará ningún libro.</string>
-    <string name="option_sync_deleted_book_records">Sincronizar localmente los libros eliminados</string>
-    <string name="info_sync_deleted_book_records">Esto comprobará la lista en caché de los libros eliminados de una importación anterior desde otro dispositivo y sincronizará esas eliminaciones. En otras palabras, los libros marcados como borrados en el otro dispositivo también se borrarán en este dispositivo.</string>
+    <string name="option_clear_deleted_book_records">Borrar el historial de los libros eliminados</string>
+    <string name="info_clear_deleted_book_records">Esto borrará el historial de libros borrados. No se borrará ningún libro.</string>
+    <string name="option_sync_deleted_book_records">Sincronizar libros borrados en este dispositivo</string>
+    <string name="info_sync_deleted_book_records">Esto comprobará el historial de los libros eliminados de una importación anterior desde otro dispositivo y sincronizará esas eliminaciones. En otras palabras, los libros marcados como borrados en el otro dispositivo también se borrarán en este dispositivo.</string>
     <string name="site_description_dutch_catalogue">Holandés y más; Catálogo</string>
     <string name="site_description_dutch_catalogue_eu_comics">Neerlandés y más; Catálogo; Cómics europeos</string>
     <string name="site_description_dutch_shopping">Holandés y más; Compras</string>
