--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -745,7 +745,7 @@
     <string name="lbl_original_title_long">Titre original si ce livre est une traduction</string>
     <string name="error_site_access_blocked">L’accès a été bloqué par le site web.</string>
     <string name="pt_scan_mode">Mode de numérisation</string>
-    <string name="option_sync_deleted_book_records">Synchroniser localement les livres supprimés</string>
+    <string name="option_sync_deleted_book_records">Synchroniser les livres supprimés sur cet appareil</string>
     <string name="site_description_dutch_catalogue">Néerlandais et plus ; Catalogue</string>
     <string name="site_description_dutch_catalogue_eu_comics">Néerlandais et plus ; Catalogue ; Bandes dessinées européennes</string>
     <string name="site_description_dutch_shopping">Néerlandais et plus ; Shopping</string>
@@ -754,4 +754,7 @@
     <string name="site_description_french_catalogue_eu_comics">Français et plus ; Catalogue ; Bandes dessinées européennes</string>
     <string name="site_description_general_shopping">Général ; Shopping</string>
     <string name="site_description_portuguese_shopping">Portugais et plus ; Shopping</string>
+    <string name="info_sync_deleted_book_records">Cette opération permet de vérifier l\'historique des livres supprimés lors d\'une précédente importation depuis un autre appareil et de synchroniser ces suppressions. En d\'autres termes, les livres supprimés sur l\'autre appareil seront également supprimés sur cet appareil.</string>
+    <string name="option_clear_deleted_book_records">Effacer l\'historique des livres supprimés</string>
+    <string name="info_clear_deleted_book_records">Cette option permet d\'effacer l\'historique des livres supprimés. Aucun livre ne sera supprimé.</string>
 </resources>
