--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -744,7 +744,7 @@
     <string name="lbl_original_title_long">Titolo originale se il libro è una traduzione</string>
     <string name="error_site_access_blocked">L’accesso è stato bloccato dal sito web.</string>
     <string name="pt_scan_mode">Modalità di scansione</string>
-    <string name="option_sync_deleted_book_records">Sincronizzare i libri eliminati localmente</string>
+    <string name="option_sync_deleted_book_records">Sincronizzare i libri eliminati su questo dispositivo</string>
     <string name="site_description_dutch_catalogue">Olandese e non solo; Catalogo</string>
     <string name="site_description_dutch_catalogue_eu_comics">Olandese e non solo; Catalogo; Fumetti europei</string>
     <string name="site_description_dutch_shopping">Olandese e altro; Shopping</string>
@@ -753,4 +753,7 @@
     <string name="site_description_french_catalogue_eu_comics">Francese e altro; Catalogo; Fumetti europei</string>
     <string name="site_description_general_shopping">Generale; Shopping</string>
     <string name="site_description_portuguese_shopping">Portoghese e altro; Shopping</string>
+    <string name="info_sync_deleted_book_records">In questo modo si controllerà la cronologia dei libri eliminati da una precedente importazione da un altro dispositivo e si sincronizzeranno tali eliminazioni. In altre parole, i libri eliminati sull\'altro dispositivo saranno eliminati anche su questo dispositivo.</string>
+    <string name="option_clear_deleted_book_records">Cancella la cronologia dei libri eliminati</string>
+    <string name="info_clear_deleted_book_records">Cancella la cronologia dei libri eliminati. Non verranno eliminati libri veri e propri.</string>
 </resources>
