--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1097,6 +1097,9 @@
     <string name="option_import_books_option_all">All books</string>
     <!-- Info text for the RB -->
     <string name="option_info_import_books_option_all">Import new books and overwrite existing books. Use this for restoring a backup.</string>
+    <!-- Option on the import screen to synchronize/mirror imported 'deleted-books' records by deleting the actual books.
+     Also used on the Maintenance screen for the same action. -->
+    <string name="option_sync_deleted_book_records">Synchronize deleted books on this device</string>
     <!-- progress final message - all data was imported. -->
     <string name="info_import_complete">Import complete</string>
     <!-- progress final message - some data was imported. The user probably canceled before we finished. -->
@@ -1284,6 +1287,12 @@
     <string name="option_rebuild_index">Rebuild the indexes</string>
     <!-- a warning that there is a rebuild of cache/index scheduled at the next app start. -->
     <string name="info_rebuild_scheduled">Rebuild scheduled</string>
+    <!-- Maintenance screen menu option information -->
+    <string name="info_sync_deleted_book_records">This will check the deleted-books history from a previous import from another device and synchronization those deletions. In other words, books deleted on the other device will also be deleted on this device.</string>
+    <!-- Maintenance screen menu option -->
+    <string name="option_clear_deleted_book_records">Clear the deleted books history</string>
+    <!-- Maintenance screen menu option information -->
+    <string name="info_clear_deleted_book_records">This will clear the deleted books history. No actual books will be deleted.</string>
     <!-- Dialog title - Internal cleanup of Booklist node states... collapsed/expanded etc. -->
     <string name="lbl_purge_blns">Clear the node state</string>
     <!-- Maintenance menu - clear all the stored node status's everywhere. -->
@@ -1557,22 +1566,6 @@
     <!-- [VERIFIED] -->
     <string name="X_lbl_folder">Folder</string>
     <!-- endregion -->
-
-
-    <!-- Option on the import screen to synchronize/mirror imported 'deleted-books' records by deleting the actual books.
-         Also used on the Maintenance screen for the same action. -->
-    <string name="option_sync_deleted_book_records">Synchronize deleted books locally</string>
-
-    <!-- TEMPORARY STRING, DO NOT TRANSLATE YET.
-         Maintenance screen -->
-    <string name="info_sync_deleted_book_records">This will check the deleted-books history from a previous import from another device and synchronization those deletions. In other words, books deleted on the other device will also be deleted on this device.</string>
-
-    <!-- TEMPORARY STRING, DO NOT TRANSLATE YET.
-         Maintenance screen -->
-    <string name="option_clear_deleted_book_records">Clear the deleted books history</string>
-    <!-- TEMPORARY STRING, DO NOT TRANSLATE YET.
-         Maintenance screen -->
-    <string name="info_clear_deleted_book_records">This will clear the deleted books history. No actual books will be deleted.</string>
 
     <!--    <string name="confirm_strip_info_import_collection">Do you want to import all your owned comics from the StripInfo.be website? This could take some time. We strongly advice to take a backup before proceeding!</string>-->
 </resources>
