--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -559,6 +559,7 @@
     <string name="info_download_successful">Stahování bylo úspěšné</string>
     <string name="info_export_report">Ve vybrané složce byl vytvořen soubor %1$s s názvem „%2$s“. Měli byste jej ručně zkopírovat jinam, abyste ochránili data pro případ poškození, ztráty nebo krádeže zařízení.</string>
     <string name="info_export_successful">Export byl úspěšný</string>
+    <string name="option_info_delete_removed_books">Knihy smazané v jiném zařízení budou smazány i v tomto zařízení.</string>
     <string name="info_import_complete">Import byl dokončen</string>
     <string name="info_import_partially_complete">Částečný import byl dokončen</string>
     <string name="progress_msg_cleaning_up">Čištění…</string>
@@ -753,7 +754,7 @@
     <string name="lbl_original_title_long">Původní název, pokud je tato kniha překladem</string>
     <string name="error_site_access_blocked">Přístup byl zablokován na webových stránkách.</string>
     <string name="pt_scan_mode">Režim skenování</string>
-    <string name="option_sync_deleted_book_records">Synchronizace smazaných knih v tomto zařízení</string>
+    <string name="option_sync_deleted_book_records">Synchronizace odstraněných knih</string>
     <string name="site_description_dutch_catalogue">Holandština a další; Katalog</string>
     <string name="site_description_dutch_catalogue_eu_comics">Nizozemština a další; Katalog; Evropský komiks</string>
     <string name="site_description_dutch_shopping">Nizozemština a další; Nakupování</string>
@@ -762,7 +763,7 @@
     <string name="site_description_french_catalogue_eu_comics">Francouzština a další; Katalog; Evropský komiks</string>
     <string name="site_description_general_shopping">Obecné; Nakupování</string>
     <string name="site_description_portuguese_shopping">Portugalština a další; Nakupování</string>
-    <string name="info_sync_deleted_book_records">Zkontroluje se historie smazaných knih z předchozího importu z jiného zařízení a tato smazání se synchronizují. Jinými slovy, knihy smazané v jiném zařízení budou smazány i v tomto zařízení.</string>
+    <string name="info_maintenance_sync_deleted_book_records">Zkontroluje se historie smazaných knih z předchozího importu z jiného zařízení a tato smazání se synchronizují. Jinými slovy, knihy smazané v jiném zařízení budou smazány i v tomto zařízení.</string>
     <string name="option_clear_deleted_book_records">Vymazání historie smazaných knih</string>
-    <string name="info_clear_deleted_book_records">Tato funkce vymaže historii smazaných knih. Žádné skutečné knihy nebudou odstraněny.</string>
+    <string name="info_maintenance_clear_deleted_book_records">Tato funkce vymaže historii smazaných knih. Žádné skutečné knihy nebudou odstraněny.</string>
 </resources>
