--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -547,6 +547,7 @@
     <string name="info_download_successful">Download riuscito</string>
     <string name="info_export_report">Nella cartella selezionata è stato creato un file %1$s chiamato «%2$s». È necessario copiarlo manualmente altrove per proteggere i dati in caso di danneggiamento, smarrimento o furto del dispositivo.</string>
     <string name="info_export_successful">Esportazione riuscita</string>
+    <string name="option_info_delete_removed_books">I libri eliminati sull\'altro dispositivo saranno eliminati anche su questo dispositivo.</string>
     <string name="info_import_complete">Importazione Completata</string>
     <string name="info_import_partially_complete">Importazione parziale eseguita</string>
     <string name="progress_msg_cleaning_up">Pulire…</string>
@@ -744,7 +745,7 @@
     <string name="lbl_original_title_long">Titolo originale se il libro è una traduzione</string>
     <string name="error_site_access_blocked">L’accesso è stato bloccato dal sito web.</string>
     <string name="pt_scan_mode">Modalità di scansione</string>
-    <string name="option_sync_deleted_book_records">Sincronizzare i libri eliminati su questo dispositivo</string>
+    <string name="option_sync_deleted_book_records">Sincronizzare i libri eliminati</string>
     <string name="site_description_dutch_catalogue">Olandese e non solo; Catalogo</string>
     <string name="site_description_dutch_catalogue_eu_comics">Olandese e non solo; Catalogo; Fumetti europei</string>
     <string name="site_description_dutch_shopping">Olandese e altro; Shopping</string>
@@ -753,7 +754,7 @@
     <string name="site_description_french_catalogue_eu_comics">Francese e altro; Catalogo; Fumetti europei</string>
     <string name="site_description_general_shopping">Generale; Shopping</string>
     <string name="site_description_portuguese_shopping">Portoghese e altro; Shopping</string>
-    <string name="info_sync_deleted_book_records">In questo modo si controllerà la cronologia dei libri eliminati da una precedente importazione da un altro dispositivo e si sincronizzeranno tali eliminazioni. In altre parole, i libri eliminati sull\'altro dispositivo saranno eliminati anche su questo dispositivo.</string>
+    <string name="info_maintenance_sync_deleted_book_records">In questo modo si controllerà la cronologia dei libri eliminati da una precedente importazione da un altro dispositivo e si sincronizzeranno tali eliminazioni. In altre parole, i libri eliminati sull\'altro dispositivo saranno eliminati anche su questo dispositivo.</string>
     <string name="option_clear_deleted_book_records">Cancella la cronologia dei libri eliminati</string>
-    <string name="info_clear_deleted_book_records">Cancella la cronologia dei libri eliminati. Non verranno eliminati libri veri e propri.</string>
+    <string name="info_maintenance_clear_deleted_book_records">Cancella la cronologia dei libri eliminati. Non verranno eliminati libri veri e propri.</string>
 </resources>
