--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -256,6 +256,7 @@
     <string name="info_export_books_option_since_last_full_backup">Alle boeken die zijn toegevoegd of bijgewerkt sinds de laatste volledige back-up.</string>
     <string name="info_export_report">Een %1$s bestand genaamd „%2$s” werd aangemaakt in de geselecteerde map. U moet het handmatig naar elders kopiëren om de gegevens te beschermen in geval van beschadiging, verlies of diefstal van uw apparaat.</string>
     <string name="info_export_successful">Export succesvol</string>
+    <string name="option_info_delete_removed_books">Boeken die op het andere apparaat verwijderd zijn, worden ook op dit apparaat verwijderd.</string>
     <string name="info_import_complete">Import Compleet</string>
     <string name="info_import_partially_complete">Gedeeltelijke import voltooid</string>
     <string name="info_isfdb_warning_limited_to">(alleen ondersteund door de ISFDB-website)</string>
@@ -741,7 +742,7 @@
     <string name="lbl_original_title_long">Oorspronkelijke titel indien dit boek een vertaling is</string>
     <string name="error_site_access_blocked">De toegang werd geblokkeerd door de website.</string>
     <string name="pt_scan_mode">Scanmodus</string>
-    <string name="option_sync_deleted_book_records">Verwijderde boeken op dit apparaat synchroniseren</string>
+    <string name="option_sync_deleted_book_records">Verwijderde boeken synchroniseren</string>
     <string name="site_description_dutch_catalogue">Nederlands en meer; Catalogus</string>
     <string name="site_description_dutch_catalogue_eu_comics">Nederlands en meer; Catalogus; Europese Strips</string>
     <string name="site_description_dutch_shopping">Nederlands en meer; Winkelen</string>
@@ -750,7 +751,7 @@
     <string name="site_description_french_catalogue_eu_comics">Frans en meer; Catalogus; Europese Strips</string>
     <string name="site_description_general_shopping">Algemeen; Winkelen</string>
     <string name="site_description_portuguese_shopping">Portugees en meer; Winkelen</string>
-    <string name="info_sync_deleted_book_records">Dit controleert de geschiedenis van verwijderde boeken van een eerdere import vanaf een ander apparaat en synchroniseert deze verwijderingen. Met andere woorden, boeken die op het andere apparaat verwijderd zijn, worden ook op dit apparaat verwijderd.</string>
+    <string name="info_maintenance_sync_deleted_book_records">Dit controleert de geschiedenis van verwijderde boeken van een eerdere import vanaf een ander apparaat en synchroniseert deze verwijderingen. Met andere woorden, boeken die op het andere apparaat verwijderd zijn, worden ook op dit apparaat verwijderd.</string>
     <string name="option_clear_deleted_book_records">Wis de geschiedenis van verwijderde boeken</string>
-    <string name="info_clear_deleted_book_records">Hiermee wordt de geschiedenis van verwijderde boeken gewist. Er worden geen boeken verwijderd.</string>
+    <string name="info_maintenance_clear_deleted_book_records">Hiermee wordt de geschiedenis van verwijderde boeken gewist. Er worden geen boeken verwijderd.</string>
 </resources>
