--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -560,6 +560,7 @@
     <string name="info_download_successful">Загрузка прошла успешно</string>
     <string name="info_export_report">В выбранной папке был создан файл %1$s с именем «%2$s». Вы должны вручную скопировать его в другое место, чтобы защитить данные в случае повреждения, потери или кражи устройства.</string>
     <string name="info_export_successful">Экспорт успешен</string>
+    <string name="option_info_delete_removed_books">Книги, удаленные на другом устройстве, будут удалены и на этом устройстве.</string>
     <string name="info_import_complete">Импорт завершен</string>
     <string name="info_import_partially_complete">Частичный импорт выполнен</string>
     <string name="progress_msg_cleaning_up">Убираться…</string>
@@ -754,7 +755,7 @@
     <string name="lbl_original_title_long">Оригинальное название, если эта книга является переводом</string>
     <string name="error_site_access_blocked">Доступ был заблокирован сайтом.</string>
     <string name="pt_scan_mode">Режим сканирования</string>
-    <string name="option_sync_deleted_book_records">Синхронизация удаленных книг на этом устройстве</string>
+    <string name="option_sync_deleted_book_records">Синхронизация удаленных книг</string>
     <string name="site_description_dutch_catalogue">Голландский и не только; Каталог</string>
     <string name="site_description_dutch_catalogue_eu_comics">Голландский и не только; Каталог; Европейские комиксы</string>
     <string name="site_description_dutch_shopping">Голландский и не только; Покупки</string>
@@ -763,7 +764,7 @@
     <string name="site_description_french_catalogue_eu_comics">Французский и более; Каталог; Европейские комиксы</string>
     <string name="site_description_general_shopping">Общий; Покупки</string>
     <string name="site_description_portuguese_shopping">Португальский и не только; Покупки</string>
-    <string name="info_sync_deleted_book_records">Это позволит проверить историю удаленных книг из предыдущего импорта с другого устройства и синхронизировать эти удаления. Другими словами, книги, удаленные на другом устройстве, будут удалены и на этом устройстве.</string>
+    <string name="info_maintenance_sync_deleted_book_records">Это позволит проверить историю удаленных книг из предыдущего импорта с другого устройства и синхронизировать эти удаления. Другими словами, книги, удаленные на другом устройстве, будут удалены и на этом устройстве.</string>
     <string name="option_clear_deleted_book_records">Очистить историю удаленных книг</string>
-    <string name="info_clear_deleted_book_records">Это очистит историю удаленных книг. При этом фактические книги удалены не будут.</string>
+    <string name="info_maintenance_clear_deleted_book_records">Это очистит историю удаленных книг. При этом фактические книги удалены не будут.</string>
 </resources>
