--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1081,11 +1081,11 @@
     <string name="lbl_import_options">Select what will be imported.</string>
     <!-- Radio button text -->
     <string name="option_import_books_option_new_only">New books only</string>
-    <!-- Info text for the RB -->
+    <!-- Info text for "option_import_books_option_new_only" -->
     <string name="option_info_import_books_option_new_only">Import only new books. Any updates to existing books will be ignored.</string>
     <!-- Radio button text -->
     <string name="option_import_books_option_new_and_updated">New and updated books</string>
-    <!-- Info text for the RB -->
+    <!-- Info text for "option_import_books_option_new_and_updated" -->
     <string name="option_info_import_books_option_new_and_updated">Import new books and synchronize existing books based on their last modification date.</string>
     <!-- Text above an EditText which has a label of "Since" and contains a date.
          Hence this string can/should be read as "Only import books modified since this date"
@@ -1095,11 +1095,15 @@
     <string name="lbl_sync_date">Since</string>
     <!-- Radio button text -->
     <string name="option_import_books_option_all">All books</string>
-    <!-- Info text for the RB -->
+    <!-- Info text for "option_import_books_option_all" -->
     <string name="option_info_import_books_option_all">Import new books and overwrite existing books. Use this for restoring a backup.</string>
+
     <!-- Option on the import screen to synchronize/mirror imported 'deleted-books' records by deleting the actual books.
-     Also used on the Maintenance screen for the same action. -->
-    <string name="option_sync_deleted_book_records">Synchronize deleted books on this device</string>
+         Also used on the Maintenance screen for the same action. -->
+    <string name="option_sync_deleted_book_records">Synchronize deleted books</string>
+    <!-- Info text for "option_sync_deleted_book_records" -->
+    <string name="option_info_delete_removed_books">Books deleted on the other device will also be deleted on this device.</string>
+
     <!-- progress final message - all data was imported. -->
     <string name="info_import_complete">Import complete</string>
     <!-- progress final message - some data was imported. The user probably canceled before we finished. -->
@@ -1288,11 +1292,11 @@
     <!-- a warning that there is a rebuild of cache/index scheduled at the next app start. -->
     <string name="info_rebuild_scheduled">Rebuild scheduled</string>
     <!-- Maintenance screen menu option information -->
-    <string name="info_sync_deleted_book_records">This will check the deleted-books history from a previous import from another device and synchronization those deletions. In other words, books deleted on the other device will also be deleted on this device.</string>
+    <string name="info_maintenance_sync_deleted_book_records">This will check the deleted-books history from a previous import from another device and synchronization those deletions. In other words, books deleted on the other device will also be deleted on this device.</string>
     <!-- Maintenance screen menu option -->
     <string name="option_clear_deleted_book_records">Clear the deleted books history</string>
     <!-- Maintenance screen menu option information -->
-    <string name="info_clear_deleted_book_records">This will clear the deleted books history. No actual books will be deleted.</string>
+    <string name="info_maintenance_clear_deleted_book_records">This will clear the deleted books history. No actual books will be deleted.</string>
     <!-- Dialog title - Internal cleanup of Booklist node states... collapsed/expanded etc. -->
     <string name="lbl_purge_blns">Clear the node state</string>
     <!-- Maintenance menu - clear all the stored node status's everywhere. -->
